# src/main/java/com/example/eco_map/usecases/dto/FavoriteRegionResponseDto.java
@@ -1,12 +1,0 @@
-package com.example.eco_map.usecases.dto;
-
-import lombok.Data;
-
-import java.util.UUID;
-
-@Data
-public class FavoriteRegionResponseDto {
-    private UUID id;
-    private String name;
-    private CoordinatesResponseDto coordinatesResponseDto;
-}
